# Deep-Learning-with-PyTorch--OppenCV-course

./: README.md
Week10-Project3-Object Detection/: For_submit_Project3_object_detection.ipynb
Week12-Project4-Kaggle Competition - Semantic Segmentation/: Project+4_+Kaggle+Competition+-+Semantic+Segmentation.ipynb  Project4-Semantic-SegmentationForSubmit.ipynb
Week5-Project 1- Implement a CNN based Image Classifier using Azure Cloud/: Data_and_Pipeline_Check.ipynb  Query.ipynb  full_code_ResNet_for_catsdogspandas.py  output
Week7- Kaggle Competition Classification/: Project2_Kaggle_Competition_Classification-for_submit.ipynb  Project2_Kaggle_Competition_Classification-for_submit_old.ipynb
opencv-dl-pytorch-week1/: Gradient_Descent.ipynb  Introduction_to_NumPy.ipynb  Pytorch_Introduction.ipynb
opencv-dl-pytorch-week11/: Dice_Coefficient_Metric.ipynb  FCN_and_DeepLab_using_Torchvision.ipynb  Instance_Segmentation_using_Mask_RCNN.ipynb  LinkNet_Architecture.ipynb  Soft-Dice_Loss.ipynb  U-Net_using_PyTorch_Hub.ipynb
opencv-dl-pytorch-week15/LibTorch/libtorch-intro/: CMakeLists.txt  Libtorch_Introduction.cpp  run_libtorch_basics.sh
opencv-dl-pytorch-week15/LibTorch/pytorch-to-libtorch/: CMakeLists.txt  load_traced_LeNet.cpp
opencv-dl-pytorch-week2/: Binary_Classifier_form_Scratch.ipynb  MLP_MNIST.ipynb  MLP_using_Functional.ipynb  MLP_with_sequential.ipynb
opencv-dl-pytorch-week3/: Classification_Evaluation_Metrics.ipynb  Implementing_LeNet.ipynb  LeNet_with_BatchNorm.ipynb  Pretrained_Classification_Models_in_Torchvision.ipynb
(+97 files in other folders)
